@@ -1,37 +1,0 @@
-// Voronoi calculation example code
-//
-// Author   : Chris H. Rycroft (LBL / UC Berkeley)
-// Email    : chr@alum.mit.edu
-// Date     : May 18th 2011
-
-#include "voro++.hh"
-
-// Set up constants for the container geometry
-const double x_min=-5,x_max=5;
-const double y_min=-5,y_max=5;
-const double z_min=0,z_max=10;
-
-int main() {
-	int nx,ny,nz;
-
-	pre_container pcon(x_min,x_max,y_min,y_max,z_min,z_max,false,false,false);
-	pcon.import("pack_ten_cube");
-	pcon.guess_optimal(nx,ny,nz);
-	printf("Opti %d %d %d\n",nx,ny,nz);
-
-	// Create a container with the geometry given above, and make it
-	// non-periodic in each of the three coordinates. Allocate space for
-	// eight particles within each computational block
-	container con(x_min,x_max,y_min,y_max,z_min,z_max,nx,ny,nz,
-			false,false,false,8);
-
-	pcon.setup(con);
-
-	// Save the Voronoi network of all the particles to text files
-	// in gnuplot and POV-Ray formats
-	con.draw_cells_gnuplot("cells_ten_cube.gnu");
-	con.draw_cells_pov("cells_ten_cube.pov");
-
-	// Output the particles in POV-Ray format
-	con.draw_particles_pov("pack_ten_cube.pov");
-}
