@@ -65,6 +65,11 @@ Version 0.4 (May 2011)
 * Added routines to copy a Voronoi cell
 * Created a new wall_list class to handle a list of walls. This simplifies the
   command-line utility code.
+* The command-line utility can produce POV-Ray output. Also, the main loop in
+  the utility has been combined so that the Voronoi tessellation is only
+  carried out once, even if POV-Ray and Gnuplot output is also required.
+* The command-line utility does range checking on the filename to prevent
+  buffer overruns
 * The routines that put particles into a container now do so more reliably for
   periodic cases, remapping them into the primary domain if necessary 
 * Fixed a bug in the print_all_custom() routine, affecting "%P" output. Thanks
@@ -75,7 +80,6 @@ Version 0.4 (May 2011)
   (Texas A&M University) for pointing this out.
 * Removed the add_vertex() and init_test() routines, which were mainly used for
   debugging
-* A man page about Voro++ can now be installed
 * Updated Doxyfile to 1.7.4
 
 Version 0.3.1 (September 29, 2009)
